style.css
.spacer {
    height: 100px;
}

hr {
    border: solid 1px black;
    width: 96%;
    color: #FFFF00;
    height: 1px;

}

.jumbotron {
    background-image: url('./images/logo-large.jpg');
    background-size: contain;
    background-position: center;
    background-attachment: fixed;
    background-repeat: no-repeat;
    background-color: white;
    min-height: 100vh;
}

/* 33, 37, 41, */

.service-wrapper {
    background: linear-gradient(rgba(54, 58, 58, .99), rgba(54, 58, 58, .99)),
        var(--image-url) center center;
    background-size: contain;
    background-repeat: no-repeat;
    background-attachment: fixed;
}

.top-section-wrapper {

    background: linear-gradient(rgba(54, 58, 58, .5), rgba(54, 58, 58, .5)),
        var(--image-url) center center;
    background-size: contain;
    background-repeat: no-repeat;
    background-attachment: fixed;

}

section {
    padding-top: 4rem;
}

body {
    font-family: 'Open Sans', sans-serif;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    font-family: 'Rubik', sans-serif;
    color: rgb(91, 142, 10);
}

p,
footer,
footer a,
footer h5 {
    color: rgb(59, 36, 22);
}

.marula-green {
    color: rgb(91, 142, 10);
}

.marula-green-bg {
    background-color: rgb(91, 142, 10) !important;
}

.marula-brown-bg {
    background-color: rgb(59, 36, 22);
}

.inner-w-bg {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: black;
    opacity: 0.5;
}

.outer-w-bg {
    position: relative;
}

.navbar-brand img {
    width: 56%;
}

.navy-nav {
    background-color: rgb(33, 37, 41);
}


.service-wrapper li,
.service-wrapper p,
.service-wrapper h3,
.service-wrapper h2 {
    color: white;
}

/* footer,
footer a,
footer h5 {
    color: black;
} */

footer a:hover {
    text-decoration: none;
}

.carousel-item img {
    width: 100%;
    max-height: 250px;
}

/* back to top */

#return-to-top {
    position: fixed;
    bottom: 20px;
    right: 20px;
    background: rgb(91, 142, 10);
    background: rgba(91, 142, 10, 0.7);
    width: 50px;
    height: 50px;
    display: block;
    text-decoration: none;
    -webkit-border-radius: 35px;
    -moz-border-radius: 35px;
    border-radius: 35px;
    display: none;
    -webkit-transition: all 0.3s linear;
    -moz-transition: all 0.3s ease;
    -ms-transition: all 0.3s ease;
    -o-transition: all 0.3s ease;
    transition: all 0.3s ease;
}

#return-to-top i {
    color: #fff;
    margin: 0;
    position: relative;
    left: 16px;
    top: 13px;
    font-size: 19px;
    -webkit-transition: all 0.3s ease;
    -moz-transition: all 0.3s ease;
    -ms-transition: all 0.3s ease;
    -o-transition: all 0.3s ease;
    transition: all 0.3s ease;
}

#return-to-top:hover {
    background: rgba(91, 142, 10, 0.9);
}

#return-to-top:hover i {
    color: #fff;
    top: 5px;
}

/* fancy hr */

hr.sep-2 {
    border: 0;
    height: 1px;
    background-image: linear-gradient(to right, rgb(59, 36, 22), #f0f0f0);
    margin-bottom: 30px;
}

#section-contact li,
#section-contact i {
    padding-top: 15px;
}

/* footer links hover highlights */
.whatsapp:hover {
    color: #25D366;
}

.mail:hover {
    color: #C71610;
}

.facebook:hover {
    color: #4267B2;
}

.twitter:hover {
    color: #1DA1F2;
}

.youtube:hover {
    color: #FF0000
}


/* marula icon as bullet */

ul {
    list-style-image: url('./images/bullet.png');
}


@media only screen and (max-width : 768px) {

    .navbar-nav,
    h3 {
        align-items: center;
        text-align: center
    }

    .jumbotron {
        background-image: url('./images/logo-med.jpg');
        min-height: 75vh;
    }
}

@media only screen and (min-width : 992px) {

    .sep-2 {
        display: none;
    }

    #section-contact li {
        padding-top: 0px;
    }
}

@media only screen and (max-width : 881px) {
    #return-to-top {
        display: none !important;
    }
}

